k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
spec:
  ingressClassName: nginx
  rules:
    - host: cloudpulse.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80

    - host: prometheus.cloudpulse.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090  

    - host: grafana.cloudpulse.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

    - host: alertmanager.cloudpulse.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093                                        
  tls:
    - hosts:
        - cloudpulse.com.ng
        - grafana.cloudpulse.com.ng
        - prometheus.cloudpulse.com.ng
        - alertmanager.cloudpulse.com.ng

      secretName: sockshop-ingress-cert
